--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -13,6 +13,18 @@ on:
         type: string
         required: false
         default: "1.61.0"
+  workflow_dispatch:
+    inputs:
+      golang_version:
+        type: string
+        required: false
+        default: "1.23"
+        description: "Go version to use"
+      golangci_lint_version:
+        type: string
+        required: false
+        default: "1.61.0"
+        description: "golangci-lint version to use"
 
 jobs:
   yaml-linter:
