ignore REUSE.toml file for license check
Doesn't make sense for this file as it manages license handling itself.

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -16,6 +16,7 @@ header:
     - LICENSE
     - LICENSES
     - NOTICE
+    - REUSE.toml
     - open_source_licenses.txt
     - "**/*.css"
     - "**/*.dccache"
