--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -76,7 +76,7 @@ env:
   MKCERT_VERSION: "v1.4.4"
   NODE_VERSION: "20.19.5"
   OLM_VERSION: "v0.28.0"
-  POSTGRESQL_VERSION: "17.0.0-debian-12-r3"
+  POSTGRESQL_VERSION: "17.6-alpine3.22"
   RUST_VERSION: "1.81.0"
   SEMVER_VERSION: "3.4.0"
   KUBECTL_VERSION: "v1.30.5"
@@ -193,7 +193,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgresql:
-        image: bitnami/postgresql:${{needs.setup.outputs.postgresql_version}}
+        image: postgres:${{needs.setup.outputs.postgresql_version}}
         options: >-
           --health-cmd "pg_isready -U postgres"
           --health-interval 10s
