--- a/.github/workflows/release-bitnami-nginx.yml
+++ b/.github/workflows/release-bitnami-nginx.yml
@@ -34,6 +34,5 @@ jobs:
           file: external/bitnami-deprecated-nginx/nginx/1.29/debian-12/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/bitnami-deprecated-nginx:1.29.1
-            ghcr.io/${{ github.repository }}/bitnami-deprecated-nginx:latest
-
+            ghcr.io/${{ toLower(github.repository) }}/bitnami-deprecated-nginx:1.29.1
+            ghcr.io/${{ toLower(github.repository) }}/bitnami-deprecated-nginx:latest
