--- a/.github/workflows/release-bitnami-nginx.yml
+++ b/.github/workflows/release-bitnami-nginx.yml
@@ -20,6 +20,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=bitnami-deprecated-nginx-1.29.1
+            type=raw,value=bitnami-deprecated-nginx-latest
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -33,6 +42,4 @@ jobs:
           context: external/bitnami-deprecated-nginx/nginx/1.29/debian-12
           file: external/bitnami-deprecated-nginx/nginx/1.29/debian-12/Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ toLower(github.repository) }}/bitnami-deprecated-nginx:1.29.1
-            ghcr.io/${{ toLower(github.repository) }}/bitnami-deprecated-nginx:latest
+          tags: ${{ steps.meta.outputs.tags }}
