--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -45,7 +45,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "modern-normalize": "^3.0.1",
-    "monaco-editor": "^0.50.0",
+    "monaco-editor": "^0.52.0",
     "prop-types": "^15.8.1",
     "protobufjs": "^7.3.2",
     "qs": "^6.13.0",
@@ -75,7 +75,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@bufbuild/buf": "^1.35.1",
     "@bufbuild/protoc-gen-es": "^2.2.2",
-    "@connectrpc/protoc-gen-connect-es": "^1.4.0",
+    "@connectrpc/protoc-gen-connect-es": "^1.7.0",
     "@craco/craco": "^7.1.0",
     "@formatjs/cli": "^6.2.12",
     "@reduxjs/toolkit": "^1.9.7",
@@ -114,7 +114,7 @@
     "postcss-scss": "^4.0.9",
     "prettier": "^3.2.5",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
     "resize-observer-polyfill": "^1.5.1",
