vibe: replace image to load for apache2

--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -534,8 +534,8 @@ jobs:
       - name: "Load needed images into Kind"
         run: |
           set -eu
-          ./script/load-kind-image.sh docker.io/bitnami/apache:2.4.48 kubeapps-ci kubeapps-ci-additional &&
-          ./script/load-kind-image.sh docker.io/bitnami/apache:2.4.48 kubeapps-ci kubeapps-ci-additional &&
+          ./script/load-kind-image.sh ghcr.io/sap/kubeapps/bitnami-deprecated-apache:2.4 kubeapps-ci kubeapps-ci-additional &&
+          ./script/load-kind-image.sh ghcr.io/sap/kubeapps/bitnami-deprecated-apache:2.4 kubeapps-ci kubeapps-ci-additional &&
           ./script/load-kind-image.sh registry:$DOCKER_REGISTRY_VERSION kubeapps-ci kubeapps-ci-additional
       - name: "Download docker images"
         uses: actions/download-artifact@v4
