--- a/chart/kubeapps/charts/postgresql/values.yaml
+++ b/chart/kubeapps/charts/postgresql/values.yaml
@@ -119,8 +119,8 @@ diagnosticMode:
 ## @param image.debug Specify if debug values should be set
 ##
 image:
-  registry: docker.io
-  repository: bitnami/postgresql
+  registry: ghcr.io
+  repository: sap/kubeapps/bitnami-deprecated-postgresql
   tag: 17.6.0-debian-12-r4
   digest: ""
   ## Specify a imagePullPolicy
@@ -1706,9 +1706,9 @@ metrics:
   ## @param metrics.image.pullSecrets Specify image pull secrets
   ##
   image:
-    registry: docker.io
-    repository: bitnami/postgres-exporter
-    tag: 0.17.1-debian-12-r16
+    registry: ghcr.io
+    repository: sap/kubeapps/bitnami-deprecated-postgres-exporter
+    tag: 0.17.1
     digest: ""
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
