--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -196,7 +196,7 @@ jobs:
       postgresql:
         image: ghcr.io/sap/kubeapps/bitnami-deprecated-postgresql:${{needs.setup.outputs.postgresql_version}}
         options: >-
-          --health-cmd "pg_isready -h localhost -p 5432 -U postgres || pg_isready -h localhost -p 5432"
+          --health-cmd "pg_isready -U postgres
           --health-interval 10s
           --health-timeout 10s
           --health-retries 10
@@ -204,8 +204,6 @@ jobs:
           - 5432:5432
         env:
           ALLOW_EMPTY_PASSWORD: "yes"
-          POSTGRESQL_DATABASE: "assets"
-          POSTGRESQL_USERNAME: "postgres"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
