--- a/chart/kubeapps/Chart.yaml
+++ b/chart/kubeapps/Chart.yaml
@@ -18,9 +18,9 @@ annotations:
     - name: kubeapps-pinniped-proxy
       image: docker.io/bitnami/kubeapps-pinniped-proxy:2.12.1-debian-12-r0
     - name: nginx
-      image: docker.io/bitnami/nginx:1.27.3-debian-12-r0
+      image: ghcr.io/sap/kubeapps/bitnami-deprecated-nginx:1.29.1
     - name: oauth2-proxy
-      image: docker.io/bitnami/oauth2-proxy:7.7.1-debian-12-r4
+      image: ghcr.io/sap/kubeapps/bitnami-deprecated-oauth2-proxy:7.12.0
 apiVersion: v2
 appVersion: DEVEL
 dependencies:
