--- a/chart/kubeapps/values.yaml
+++ b/chart/kubeapps/values.yaml
@@ -216,9 +216,9 @@ frontend:
   ## @param frontend.image.debug Enable image debug mode
   ##
   image:
-    registry: docker.io
-    repository: bitnami/nginx
-    tag: 1.27.3-debian-12-r0
+    registry: ghcr.io
+    repository: sap/kubeapps/bitnami-deprecated-nginx
+    tag: 1.29.1
     digest: ""
     ## Specify a imagePullPolicy
     ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
@@ -1423,7 +1423,7 @@ authProxy:
   ##
   image:
     registry: ghcr.io
-    repository: /sap/kubeapps/bitnami-deprecated-oauth2-proxy
+    repository: sap/kubeapps/bitnami-deprecated-oauth2-proxy
     tag: 7.12.0
     digest: ""
     ## Specify a imagePullPolicy
