--- a/integration/charts/simplechart-multicustomvalues/values-scenario-a.yaml
+++ b/integration/charts/simplechart-multicustomvalues/values-scenario-a.yaml
@@ -2,6 +2,6 @@
 # SPDX-License-Identifier: Apache-2.0
 
 image:
-  repository: bitnami/nginx
-  tag: "1.23.3-debian-11"
+  repository: ghcr.io/sap/kubeapps/bitnami-deprecated-nginx
+  tag: "1.29.1"
   pullPolicy: IfNotPresent
