--- a/external/charts/apache/11.4.28/values.yaml
+++ b/external/charts/apache/11.4.28/values.yaml
@@ -689,9 +689,9 @@ metrics:
   ## @param metrics.image.debug Apache Exporter image debug mode
   ##
   image:
-    registry: docker.io
-    repository: bitnami/apache-exporter
-    tag: 1.0.10-debian-12-r55
+    registry: ghcr.io
+    repository: sap/kubeapps/bitnami-deprecated-apache-exporter
+    tag: 1
     digest: ""
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
