--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -52,7 +52,7 @@ env:
   DEBUG_MODE: "false"
   SSH_KEY_KUBEAPPS_DEPLOY_FILENAME: "id_rsa_kubeapps_deploy_key"
   SSH_KEY_FORKED_CHARTS_DEPLOY_FILENAME: "id_rsa_forked_charts_deploy_key"
-  KUBEAPPS_REPO: "sap/kubeapps"
+  KUBEAPPS_REPO: "SAP/kubeapps"
   BRANCH_KUBEAPPS_REPO: "main"
   README_GENERATOR_REPO: "bitnami-labs/readme-generator-for-helm"
   DOCKER_REGISTRY_VERSION: "2.8.3"
@@ -120,6 +120,8 @@ jobs:
           PR_CONTEXT: ${{ toJSON(github.event.pull_request) }}
           PR_SOURCE_REPO_NAME: ${{ github.event.pull_request.head.repo.full_name }}
         run: |
+
+          echo "Current GitHub Repo is ${GITHUB_REPOSITORY}" >> $GITHUB_OUTPUT
           if [[ "${GITHUB_REPOSITORY}" == "${KUBEAPPS_REPO}" ]]; then
             echo "img_prefix=${IMG_PREFIX}" >> $GITHUB_OUTPUT
           else
