--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -623,8 +623,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/download-artifact@v4
       - run: |
           set -eu
@@ -646,7 +647,7 @@ jobs:
             docker load --input "${artifact}/${artifact}.tar"
 
             dev_image=${IMG_PREFIX}${image}${IMG_MODIFIER}:${IMG_DEV_TAG}
-            prod_image=${IMG_PREFIX}${image}:${IMG_PROD_TAG}
+            prod_image=${GHCR_PREFIX}${IMG_PREFIX}${image}:${IMG_PROD_TAG}
             docker tag ${dev_image} ${prod_image}
 
             echo "::notice ::Pushing image ${prod_image}"
