ignore broadcom apache-2 header in ext dependencies

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -44,6 +44,7 @@ header:
     - "dashboard/src/setupProxy.js"
     - "integration/charts/**/_helpers.tpl"
     - "pkg/kube/dockerconfig.go"
+    - "external/**" # REUSE will verify its Apache-2.0; therefore ignoring here broadcoms orginal header
 
 dependency:
   files:
