--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -620,6 +620,7 @@ jobs:
     env:
       IMG_PROD_TAG: ${{ needs.setup.outputs.img_prod_tag }}
       IMG_PREFIX: ${{ needs.setup.outputs.img_prefix }}
+      GHCR_PREFIX: "ghcr.io/sap/"
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
