disable gke tests for release

--- a/.github/workflows/kubeapps-release.yml
+++ b/.github/workflows/kubeapps-release.yml
@@ -18,6 +18,6 @@ jobs:
     uses: ./.github/workflows/kubeapps-general.yaml
     secrets: inherit
     with:
-      run_gke_tests: true
+      run_gke_tests: false
       run_linters: false
       trigger_release: true
