--- a/.github/workflows/release-bitnami-apache-exporter.yml
+++ b/.github/workflows/release-bitnami-apache-exporter.yml
@@ -7,6 +7,8 @@ name: B&R dep Bitnami Apache Exporter
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - 'external/bitnami-deprecated-apache-exporter/1/debian-12/**'
       - '.github/workflows/release-bitnami-apache.yml'
