--- a/.github/workflows/release-bitnami-golang.yml
+++ b/.github/workflows/release-bitnami-golang.yml
@@ -6,6 +6,8 @@ name: B&R dep Bitnami golang
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - 'external/bitnami-deprecated-golang/1.25/debian-12/**'
       - '.github/workflows/release-bitnami-golang.yml'
