--- a/.github/workflows/release-bitnami-nginx.yml
+++ b/.github/workflows/release-bitnami-nginx.yml
@@ -6,6 +6,8 @@ name: B&R dep Bitnami Nginx
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - 'external/bitnami-deprecated-nginx/nginx/1.29/debian-12/**'
       - '.github/workflows/release-bitnami-nginx.yml'
