--- a/.github/workflows/release-bitnami-oauth2-proxy.yml
+++ b/.github/workflows/release-bitnami-oauth2-proxy.yml
@@ -6,6 +6,8 @@ name: B&R dep Bitnami OAuth2 Proxy
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - 'external/bitnami-deprecated-oauth2-proxy/oauth2-proxy/7.8/debian-12/**'
       - '.github/workflows/release-bitnami-oauth2-proxy.yml'
