--- a/.github/workflows/release-bitnami-os-shell.yml
+++ b/.github/workflows/release-bitnami-os-shell.yml
@@ -6,6 +6,8 @@ name: B&R dep Bitnami os-shell
 on:
   workflow_dispatch:
   push:
+    tags-ignore:
+      - '*'
     paths:
       - 'external/bitnami-deprecated-os-shell/12/debian-12/**'
       - '.github/workflows/release-bitnami-os-shell.yml'
