--- a/integration/Dockerfile
+++ b/integration/Dockerfile
@@ -1,7 +1,7 @@
 # Copyright 2019-2024 the Kubeapps contributors.
 # SPDX-License-Identifier: Apache-2.0
 
-FROM mcr.microsoft.com/playwright:v1.48.1-jammy
+FROM mcr.microsoft.com/playwright:v1.56.1-noble
 WORKDIR /app/
 
 # Copy and install deps
