--- a/chart/kubeapps/charts/postgresql/Chart.yaml
+++ b/chart/kubeapps/charts/postgresql/Chart.yaml
@@ -4,18 +4,18 @@
 annotations:
   images: |
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r51
+      image: ghcr.io/sap/kubeapps/os-shell:12-debian-12-r51
     - name: postgres-exporter
-      image: docker.io/bitnami/postgres-exporter:0.17.1-debian-12-r16
+      image: ghcr.io/sap/kubeapps/postgres-exporter:0.17.1-debian-12-r16
     - name: postgresql
-      image: docker.io/bitnami/postgresql:17.6.0-debian-12-r4
+      image: ghcr.io/sap/kubeapps/postgresql:17.6.0-debian-12-r4
   licenses: Apache-2.0
   tanzuCategory: service
 apiVersion: v2
 appVersion: 17.6.0
 dependencies:
 - name: common
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: file://./charts/common
   tags:
   - bitnami-common
   version: 2.x.x
