--- a/external/bitnami-deprecated-golang/1.25/debian-12/Dockerfile
+++ b/external/bitnami-deprecated-golang/1.25/debian-12/Dockerfile
@@ -7,13 +7,13 @@ ARG DOWNLOADS_URL="downloads.bitnami.com/files/stacksmith"
 ARG TARGETARCH
 
 LABEL org.opencontainers.image.base.name="docker.io/bitnami/minideb:bookworm" \
-      org.opencontainers.image.created="2025-09-23T18:48:44Z" \
-      org.opencontainers.image.description="Application packaged by Broadcom, Inc." \
+      org.opencontainers.image.created="2025-11-20T11:11:11Z" \
+      org.opencontainers.image.description="Application packaged by SAP SE or an SAP affiliate company" \
       org.opencontainers.image.documentation="https://github.com/bitnami/containers/tree/main/bitnami/golang/README.md" \
-      org.opencontainers.image.source="https://github.com/bitnami/containers/tree/main/bitnami/golang" \
+      org.opencontainers.image.source="https://github.com/SAP/kubeapps/blob/6c1222e96c98577f51513c5987f42d49e6b63a92/external/bitnami-deprecated-golang/1.25" \
       org.opencontainers.image.title="golang" \
-      org.opencontainers.image.vendor="Broadcom, Inc." \
-      org.opencontainers.image.version="1.25.1"
+      org.opencontainers.image.vendor="SAP SE or an SAP affiliate company" \
+      org.opencontainers.image.version="1.25.4"
 
 ENV OS_ARCH="${TARGETARCH:-amd64}" \
     OS_FLAVOUR="debian-12" \
@@ -27,7 +27,7 @@ RUN --mount=type=secret,id=downloads_url,env=SECRET_DOWNLOADS_URL \
     DOWNLOADS_URL=${SECRET_DOWNLOADS_URL:-${DOWNLOADS_URL}} ; \
     mkdir -p /tmp/bitnami/pkg/cache/ ; cd /tmp/bitnami/pkg/cache/ || exit 1 ; \
     COMPONENTS=( \
-      "golang-1.25.1-0-linux-${OS_ARCH}-debian-12" \
+      "golang-1.25.4-0-linux-${OS_ARCH}-debian-12" \
     ) ; \
     for COMPONENT in "${COMPONENTS[@]}"; do \
       if [ ! -f "${COMPONENT}.tar.gz" ]; then \
@@ -43,7 +43,7 @@ RUN apt-get update && apt-get upgrade -y && \
 RUN find / -perm /6000 -type f -exec chmod a-s {} \; || true
 RUN mkdir -p "/go/src" "/go/bin" && chmod -R 777 "/go"
 
-ENV APP_VERSION="1.25.1" \
+ENV APP_VERSION="1.25.4" \
     BITNAMI_APP_NAME="golang" \
     GOCACHE="/go/.cache" \
     GOPATH="/go" \
