--- a/.github/workflows/kubeapps-general.yaml
+++ b/.github/workflows/kubeapps-general.yaml
@@ -79,7 +79,6 @@ env:
   IMG_PREFIX_FOR_FORKS: "your-dockerhub-username/"
   # Currently, we only build the images for linux/amd64 because building cross-platform images is extremely slow...
   IMG_PLATFORMS: "linux/amd64"
-  KAPP_CONTROLLER_VERSION: "v0.50.6"
   FLUX_VERSION: "v2.2.3"
   KIND_VERSION: "v0.23.0"
   K8S_KIND_VERSION: "v1.30.0@sha256:047357ac0cfea04663786a612ba1eaba9702bef25227a794b52890dd8bcd692e"
@@ -491,7 +490,6 @@ jobs:
       fail-fast: false
       matrix:
         tests_group:
-          # - carvel  # Disabled: removing Carvel tests from local e2e matrix
           - flux
           - main-group-1
           - main-group-2
@@ -604,7 +602,7 @@ jobs:
 
   # We need this job to aggregate the result of the local_e2e_tests matrix and summarize it. We don't need it because of
   # GHA itself, but because in GH branch protection rules, we cannot check the status for a job matrix, and would have
-  # require the status for each job in the matrix (eg. local_e2e_tests(carvel)).
+  # require the status for each job in the matrix (eg. local_e2e_tests(flux)).
   # See https://github.com/orgs/community/discussions/26822
   local_e2e_tests_result:
     needs:
@@ -755,7 +753,6 @@ jobs:
       IMG_DEV_TAG: ${{ steps.set-outputs.outputs.IMG_DEV_TAG }}
       IMG_MODIFIER: ${{ steps.set-outputs.outputs.IMG_MODIFIER }}
       IMG_PREFIX: ${{ steps.set-outputs.outputs.IMG_PREFIX }}
-      KAPP_CONTROLLER_VERSION: ${{ steps.set-outputs.outputs.KAPP_CONTROLLER_VERSION }}
       FLUX_VERSION: ${{ steps.set-outputs.outputs.FLUX_VERSION }}
       KUBECTL_VERSION: ${{ steps.set-outputs.outputs.KUBECTL_VERSION }}
       OLM_VERSION: ${{ steps.set-outputs.outputs.OLM_VERSION }}
@@ -774,7 +771,6 @@ jobs:
           echo "IMG_DEV_TAG=${{ needs.setup.outputs.img_dev_tag }}" >> $GITHUB_OUTPUT
           echo "IMG_MODIFIER=${{ needs.setup.outputs.img_modifier }}" >> $GITHUB_OUTPUT
           echo "IMG_PREFIX=${{ needs.setup.outputs.img_prefix }}" >> $GITHUB_OUTPUT
-          echo "KAPP_CONTROLLER_VERSION=${KAPP_CONTROLLER_VERSION}" >> $GITHUB_OUTPUT
           echo "FLUX_VERSION=${FLUX_VERSION}" >> $GITHUB_OUTPUT
           echo "KUBECTL_VERSION=${KUBECTL_VERSION}" >> $GITHUB_OUTPUT
           echo "OLM_VERSION=${OLM_VERSION}" >> $GITHUB_OUTPUT
@@ -796,7 +792,6 @@ jobs:
       IMG_DEV_TAG: ${{ needs.gke_setup.outputs.IMG_DEV_TAG }}
       IMG_MODIFIER: ${{ needs.gke_setup.outputs.IMG_MODIFIER }}
       IMG_PREFIX: ${{ needs.gke_setup.outputs.IMG_PREFIX }}
-      KAPP_CONTROLLER_VERSION: ${{ needs.gke_setup.outputs.KAPP_CONTROLLER_VERSION }}
       FLUX_VERSION: ${{ needs.gke_setup.outputs.FLUX_VERSION }}
       KUBECTL_VERSION: ${{ needs.gke_setup.outputs.KUBECTL_VERSION }}
       OLM_VERSION: ${{ needs.gke_setup.outputs.OLM_VERSION }}
@@ -821,7 +816,6 @@ jobs:
       IMG_DEV_TAG: ${{ needs.gke_setup.outputs.IMG_DEV_TAG }}
       IMG_MODIFIER: ${{ needs.gke_setup.outputs.IMG_MODIFIER }}
       IMG_PREFIX: ${{ needs.gke_setup.outputs.IMG_PREFIX }}
-      KAPP_CONTROLLER_VERSION: ${{ needs.gke_setup.outputs.KAPP_CONTROLLER_VERSION }}
       FLUX_VERSION: ${{ needs.gke_setup.outputs.FLUX_VERSION }}
       KUBECTL_VERSION: ${{ needs.gke_setup.outputs.KUBECTL_VERSION }}
       OLM_VERSION: ${{ needs.gke_setup.outputs.OLM_VERSION }}
