--- a/.github/workflows/kubeapps-release.yml
+++ b/.github/workflows/kubeapps-release.yml
@@ -9,6 +9,10 @@ on:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
+permissions:
+  contents: write
+  packages: read
+
 concurrency:
   group: ${{ github.head_ref || github.ref_name }}_release
   cancel-in-progress: true
