fix token issue on helm index gha

--- a/.github/workflows/helm-index.yml
+++ b/.github/workflows/helm-index.yml
@@ -27,6 +27,8 @@ env:
 jobs:
   publish_index:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
